Yammer sign on done

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
         <input type="hidden" name="signIn" value="google" />
         <input type="submit" value="Sign in with Google"/>
       </form>
+      <br>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="yammer" />
+        <input type="submit" value="Sign in with Yammer"/>
+      </form>
     </center>
   </div>
 
