Basecamp sign on done

--- a/templates/yammer/index.html
+++ b/templates/yammer/index.html
@@ -1,5 +1,8 @@
 <div>
   <center>
     You have been signed in with Yammer
+    <br />
+    <a href="/" >Take me back to the home page</a>
   </center>
+
 </div>
