--- a/templates/google/index.html
+++ b/templates/google/index.html
@@ -2,5 +2,8 @@
   <center>
     You have been signed in with Google and here are the files in your drive :
     {{files}}
+    <br />
+    <a href="/" >Take me back to the home page</a>
   </center>
+
 </div>
