--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,14 @@
         <input type="submit" value="Sign in with Google"/>
       </form>
       <br>
-      <br>
       <form method="post">
         <input type="hidden" name="signIn" value="yammer" />
         <input type="submit" value="Sign in with Yammer"/>
+      </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="basecamp" />
+        <input type="submit" value="Sign in with Basecamp"/>
       </form>
     </center>
   </div>
