Zendesk sign on done

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,11 @@
         <input type="hidden" name="signIn" value="basecamp" />
         <input type="submit" value="Sign in with Basecamp"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="zendesk" />
+        <input type="submit" value="Sign in with Zendesk"/>
+      </form>
     </center>
   </div>
 
