Box sign on done

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,11 @@
         <input type="hidden" name="signIn" value="zendesk" />
         <input type="submit" value="Sign in with Zendesk"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="box" />
+        <input type="submit" value="Sign in with Box"/>
+      </form>
     </center>
   </div>
 
