Formstack sign on done

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
         <input type="hidden" name="signIn" value="box" />
         <input type="submit" value="Sign in with Box"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="formstack" />
+        <input type="submit" value="Sign in with Formstack"/>
+      </form>
     </center>
   </div>
 
