Bug fixes in existing sign on implementations

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,11 @@
         <input type="hidden" name="signIn" value="formstack" />
         <input type="submit" value="Sign in with Formstack"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="github" />
+        <input type="submit" value="Sign in with Github"/>
+      </form>
     </center>
   </div>
 
