--- a/templates/zendesk/transition.html
+++ b/templates/zendesk/transition.html
@@ -1,5 +1,7 @@
 <div>
-  <form method="post" >
-    <input type="submit" value="Sign in with Zendesk"/>
-  </form>
+  <center>
+    <form method="post" >
+      <input type="submit" value="Sign in with Zendesk"/>
+    </form>
+  </center>
 </div>
