--- a/templates/github/transition.html
+++ b/templates/github/transition.html
@@ -1,7 +1,7 @@
 <div>
   <center>
     <form method="post" >
-      <input type="submit" value="Sign in with Formstack"/>
+      <input type="submit" value="Sign in with Github"/>
     </form>
   </center>
 </div>
