Reddit login done

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,11 @@
         <input type="hidden" name="signIn" value="github" />
         <input type="submit" value="Sign in with Github"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="reddit" />
+        <input type="submit" value="Sign in with Reddit"/>
+      </form>
     </center>
   </div>
 
