Yandex sign on done

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,11 @@
         <input type="hidden" name="signIn" value="reddit" />
         <input type="submit" value="Sign in with Reddit"/>
       </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="yandex" />
+        <input type="submit" value="Sign in with Yandex"/>
+      </form>
     </center>
   </div>
 
