--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,10 @@
         <input type="hidden" name="signIn" value="yammer" />
         <input type="submit" value="Sign in with Yammer"/>
       </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="VK" />
+        <input type="submit" value="Sign in with VK"/>
+      </form>
     </center>
   </div>
 
