VK and stripe done

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,12 @@
       <form method="post">
         <input type="hidden" name="signIn" value="VK" />
         <input type="submit" value="Sign in with VK"/>
+      </form>
+      <br>
+      <form method="post">
+        <input type="hidden" name="signIn" value="stripe" />
+        <input type="submit" value="Sign in with Stripe"/>
+      </form>
       <br>
       <form method="post">
         <input type="hidden" name="signIn" value="basecamp" />
