adding foursquare,fitbit,instagram,twitch and few more things

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,22 @@
         <input type="hidden" name="signIn" value="yandex" />
         <input type="submit" value="Sign in with Yandex"/>
       </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="twitch" />
+        <input type="submit" value="Sign in with Twitch"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="insta" />
+        <input type="submit" value="Sign in with Instagram"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="four" />
+        <input type="submit" value="Sign in with Foursquare"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="fitbit" />
+        <input type="submit" value="Sign in with Fitbit"/>
+      </form>
     </center>
   </div>
 
