adding all other sign ons

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,34 @@
         <input type="hidden" name="signIn" value="fitbit" />
         <input type="submit" value="Sign in with Fitbit"/>
       </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="imgur" />
+        <input type="submit" value="Sign in with Imgur"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="linkedin" />
+        <input type="submit" value="Sign in with Linkedin"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="salesforce" />
+        <input type="submit" value="Sign in with Salesforce"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="strava" />
+        <input type="submit" value="Sign in with Strava"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="dropbox" />
+        <input type="submit" value="Sign in with Dropbox"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="battlenet" />
+        <input type="submit" value="Sign in with Battle.net"/>
+      </form>
+      <form method="post">
+        <input type="hidden" name="signIn" value="yahoo" />
+        <input type="submit" value="Sign in with Yahoo"/>
+      </form>
     </center>
   </div>
 
