--- a/templates/stripe/index.html
+++ b/templates/stripe/index.html
@@ -1,5 +1,7 @@
 <div>
   <center>
     You have been signed in with Stripe
+    <br />
+      <a href="/" >Take me back to the home page</a>
   </center>
 </div>
