Code changed to have appspot enpoint and many other changes

--- a/templates/insta/transition.html
+++ b/templates/insta/transition.html
@@ -1,5 +1,6 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+
 <div>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://www.instagram.com/accounts/login/?force_classic_login=&next=/oauth/authorize/%3Fclient_id%3Deb5e9e8230884648ac0951c5323222fb%26response_type%3Dcode%26redirect_uri%3Dhttp%3A//localhost%3A10080/instacallback">
       <input type="hidden" name="username" value="amruthadevme" />
