--- a/templates/VK/transition.html
+++ b/templates/VK/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://login.vk.com/?act=login&soft=1">
       <input type="hidden" name="email" value="+13128749062" />
