--- a/templates/basecamp/transition.html
+++ b/templates/basecamp/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" action="https://launchpad.37signals.com/session" target="target" style="display:none">
       <input name="utf8" type="hidden" value="✓">
