--- a/templates/box/transition.html
+++ b/templates/box/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" action="https://account.box.com/api/oauth2/authorize?response_type=code&redirect_uri=http://localhost:10080/boxcallback&client_id=nip8kyd6cqy4a78ze9dcc05lbjhwwv5f&state=security_token" target="target"  style="display:none">
       <input type="hidden" name="login" value="amruthadevme@gmail.com" />
