--- a/templates/formstack/transition.html
+++ b/templates/formstack/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://www.formstack.com/api/v2/oauth2/authorize" id="account">
                 <input type="hidden" name="client_id" value="13697">
