--- a/templates/reddit/transition.html
+++ b/templates/reddit/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+<script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" target="target" style="display:none" action="https://www.reddit.com/post/login">
       <input type="hidden" name="user" value="dagny15"/>
