--- a/templates/stripe/transition.html
+++ b/templates/stripe/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://connect.stripe.com/ajax/sessions">
       <input type="hidden" name="email" value="amruthadevme@gmail.com" />
