--- a/templates/twitch/transition.html
+++ b/templates/twitch/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://passport.twitch.tv/authentications/new">
       <input type="hidden" name="username" value="amruthadagny" />
