--- a/templates/yandex/transition.html
+++ b/templates/yandex/transition.html
@@ -1,5 +1,5 @@
 <div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
     <form method="post" style="display:none" target="target" action="https://passport.yandex.com/auth?retpath=https%3A%2F%2Fpassport.yandex.com%2Fprofile&mode=qr">
       <input type="text" name="login" value="amrutha.ramesh">
