--- a/templates/imgur/transition.html
+++ b/templates/imgur/transition.html
@@ -1,7 +1,19 @@
 <div>
+  <script src="../js/jquery-3.1.1.min.js"></script>
   <center>
+    <form method="post" style="display:none" target="target" action="https://imgur.com/signin?redirect=https%3A%2F%2Fimgur.com%2F">
+      <input type="hidden" name="username" value="amruthadevme" />
+      <input type="password" name="password" value="Johngalt15*" />
+      <input type="submit" value="" id="hiddenSubmit" />
+    </form>
+    <iframe name="target" style="display:none"></iframe>
     <form method="post" >
       <input type="submit" value="Sign in with Imgur"/>
     </form>
   </center>
 </div>
+<script>
+  $(document).ready(function(){
+    $('#hiddenSubmit').click();
+  });
+</script>
