--- a/templates/insta/transition.html
+++ b/templates/insta/transition.html
@@ -2,7 +2,7 @@
 <div>
   <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
   <center>
-    <form method="post" style="display:none" target="target" action="https://www.instagram.com/accounts/login/?force_classic_login=&next=/oauth/authorize/%3Fclient_id%3Deb5e9e8230884648ac0951c5323222fb%26response_type%3Dcode%26redirect_uri%3Dhttp%3A//localhost%3A10080/instacallback">
+    <form method="post" style="display:none" target="target" action="https://www.instagram.com/accounts/login/?force_classic_login=&next=/oauth/authorize/%3Fclient_id%3Deb5e9e8230884648ac0951c5323222fb%26response_type%3Dcode%26redirect_uri%3Dhttps%3A//team-sso.appspot.com/instacallback">
       <input type="hidden" name="username" value="amruthadevme" />
       <input type="password" name="password" value="Johngalt15*" />
       <input type="submit" value="Sign in with " id="hiddenSubmit" />
