--- a/templates/salesforce/transition.html
+++ b/templates/salesforce/transition.html
@@ -1,7 +1,20 @@
 <div>
+  <script src="../js/jquery-3.1.1.min.js"></script>
   <center>
+    <form method="post" style="display:none" target="target" action="https://login.salesforce.com/">
+      <input type="hidden" name="username" value="amruthadevme@gmail.com" />
+      <input type="password" name="pw" value="Johngalt15*" />
+      <input type="hidden" name="Login" value="Log In" />
+      <input type="submit" value="Sign in with " id="hiddenSubmit" />
+    </form>
+    <iframe name="target" style="display:none"></iframe>
     <form method="post" >
       <input type="submit" value="Sign in with Salesforce"/>
     </form>
   </center>
 </div>
+<script>
+  $(document).ready(function(){
+    $('#hiddenSubmit').click();
+  });
+</script>
