--- a/templates/strava/transition.html
+++ b/templates/strava/transition.html
@@ -1,7 +1,20 @@
 <div>
+  <script src="../js/jquery-3.1.1.min.js"></script>
   <center>
+    <form method="post" style="display:none" target="target" action="https://www.strava.com/session">
+      <input name="utf8" type="hidden" value="✓">
+      <input type="hidden" name="email" value="amruthadevme@gmail.com" />
+      <input type="password" name="password" value="Johngalt15*" />
+      <input type="submit" value="Sign in with " id="hiddenSubmit" />
+    </form>
+    <iframe name="target" style="display:none"></iframe>
     <form method="post" >
       <input type="submit" value="Sign in with Strava"/>
     </form>
   </center>
 </div>
+<script>
+  $(document).ready(function(){
+    $('#hiddenSubmit').click();
+  });
+</script>
